--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "next-learn-red-notice-api",
   "version": "1.0.0",
-  "main": "./src/index.js",
+  "main": "./src/index.ts",
   "repository": "https://github.com/karrycgi/next-learn-red-notice-api.git",
   "author": "Martin Karry <martin.karry@cgi.com>",
   "license": "MIT",
