--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "next-learn-red-notice-api",
   "version": "1.0.0",
-  "main": "./index.ts",
+  "main": "./build/index.js",
   "repository": "https://github.com/karrycgi/next-learn-red-notice-api.git",
   "author": "Martin Karry <martin.karry@cgi.com>",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev --respawn ./src/index.ts"
+    "start": "ts-node-dev --respawn ./src/index.ts",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
