--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node-dev --respawn ./src/app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "postinstall": "tsc"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
