--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "node-fetch": "^3.1.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4"
+    "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "typescript": "^4.5.4"
   }
 }
