--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^0.24.0"
+  },
+  "peerDependencies": {
     "typescript": "^4.5.4"
   }
 }
